improves visual hierarchy on qset details page (class page), introduces compressed subset (child qset list), all-mine-other filter now sticks to top of question list on small viewports, qset question counts fixed

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -1,18 +1,26 @@
-// Place all the styles related to the questions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-#all-mine-filter{
-  margin-bottom: 15px;
+.all-mine-other-filter {
+  margin-right: 25px;  // aligns with right side of question list
 }
 
-.panel-title {
-  .btn-flat {
-    color: white;
-    &:hover {
-      color: white;
-    }
+// (All-mine-filter relocation at different screen sizes)
+// On small screens (bootstrap xs) show all-mine-other filter
+// just above the question list, since it wraps onto its own .row
+#all-mine-filter-container-xs {
+  display: none;
+}
+@media only screen and (max-width: 767px) {
+  #all-mine-filter-container-xs {
+    display: block;
   }
+  #all-mine-filter-container {
+    display: none;
+  }
+}
+// End of (All-mine-filter relocation at different screen sizes)
+
+ul.qset-list-compressed {
+  list-style: none;
+  padding-left: 10px;
 }
 
 .btn-div{
@@ -101,18 +109,19 @@
 .question-content {
   cursor: default;
   float: left;
+  font-size: 24px;
   width: 100%;
   word-wrap: break-word;
+  // right- and top-align edit/delete icons
+  .actions {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
 
-.question-content-inner {
-  float: left;
-  width: 100%;
-
-  a {
-    font-size: 24px;
-  }
-
+.qset-list {
+  cursor:default;  // cursor won't change to caret/text insert over badges
 }
 
 .col-sm-6 {
